[gd_scene load_steps=13 format=1]

[ext_resource path="res://Scripts/characterSelect.gd" type="Script" id=1]
[ext_resource path="res://Packed/ColorFrame.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/8bitHeader.fnt" type="BitmapFont" id=3]
[ext_resource path="res://Sprites/Reapy_0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Background/SelectButtonup.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Background/SelectButtondown.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Background/SelectButtonupL.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Background/SelectButtondownL.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Background/Buttonup.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Background/Buttondown.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Background/backButtonUp.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Background/backButtonDn.png" type="Texture" id=12]

[node name="Character Select" type="Node2D"]

script/script = ExtResource( 1 )

[node name="ColorFrame" parent="." instance=ExtResource( 2 )]

margin/right = 1025.0

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 377.0
margin/top = 53.0
margin/right = 647.0
margin/bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "Create a Character"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Character" type="Sprite" parent="."]

transform/pos = Vector2( 507.748, 185.022 )
transform/scale = Vector2( 2.48481, 2.48481 )
texture = ExtResource( 4 )

[node name="ButtonRight" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 627.0
margin/top = 148.0
margin/right = 676.0
margin/bottom = 213.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[node name="ButtonLeft" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 345.0
margin/top = 148.0
margin/right = 396.0
margin/bottom = 213.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
textures/pressed = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[node name="Loading" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 362.0
margin/top = 392.0
margin/right = 662.0
margin/bottom = 467.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Start" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 448.0
margin/top = 291.0
margin/right = 835.0
margin/bottom = 421.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 9 )
textures/pressed = ExtResource( 10 )
params/resize_mode = 0
params/scale = Vector2( 0.35, 0.35 )
params/stretch_mode = 0

[node name="Back" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 55.0
margin/top = 491.0
margin/right = 442.0
margin/bottom = 621.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[connection signal="released" from="ButtonRight" to="." method="_on_ButtonRight_released"]

[connection signal="released" from="ButtonLeft" to="." method="_on_ButtonLeft_released"]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="released" from="Start" to="." method="_on_Start_released"]

[connection signal="released" from="Back" to="." method="_on_Back_released"]


